[Refactor] Massive code refactor over validation on Sonar